Commit 26-Oct Basic Driver setup and launch the URL

--- a/midtrans_automation/profiles/config.properties
+++ b/midtrans_automation/profiles/config.properties
@@ -1,4 +1,4 @@
-profile.path = /profiles/local/config.properties
+profile.path = profiles/config.propertie
 platform=mac
 #Applicable for ChromeDriver and InternetExplorerDriver full path location
 driver.root.dir=tools
