--- a/midtrans_automation/pom.xml
+++ b/midtrans_automation/pom.xml
@@ -43,30 +43,36 @@
             <version>4.0.0-alpha-6</version>
     </dependency>
    
+   
+   <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+	<dependency>
+    		<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-surefire-plugin</artifactId>
+    		<version>3.0.0-M5</version>
+	</dependency>
+   
     <dependency>
             <groupId>net.masterthought</groupId>
             <artifactId>maven-cucumber-reporting</artifactId>
             <version>5.0.0</version>
     </dependency>
    
-    <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>cucumber-jvm-deps</artifactId>
-            <version>${cucumber-jvm-deps}</version>
-    </dependency>
-   
-    <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-    </dependency>
+    <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+	<dependency>
+    		<groupId>io.cucumber</groupId>
+    		<artifactId>cucumber-junit</artifactId>
+    		<version>6.8.1</version>
+    		<scope>test</scope>
+   </dependency>
+
     
-    <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-java</artifactId>
-            <version>4.7.0</version>
-    </dependency>
+    <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+	<dependency>
+    		<groupId>io.cucumber</groupId>
+    		<artifactId>cucumber-java</artifactId>
+    		<version>6.8.1</version>
+	</dependency>
+
    
     <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -93,6 +99,14 @@
             <version>1.5.2</version>
     </dependency>
     
+    <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-core -->
+	<dependency>
+    		<groupId>io.cucumber</groupId>
+    		<artifactId>cucumber-core</artifactId>
+    		<version>6.8.1</version>
+	</dependency>
+    
+    
     <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -104,6 +118,15 @@
             <artifactId>annotations</artifactId>
             <version>${org.jetbrains}</version>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+ 	<dependency>
+    		<groupId>org.slf4j</groupId>
+    		<artifactId>slf4j-simple</artifactId>
+    		<version>1.6.1</version>
+    		<scope>test</scope>
+</dependency>
+    
   </dependencies>
   
   
