--- a/midtrans_automation/pom.xml
+++ b/midtrans_automation/pom.xml
@@ -16,6 +16,8 @@
         <utf-8>UTF-8</utf-8>
         <java-version>1.8</java-version>
         <org.jetbrains>13.0</org.jetbrains>
+        <cucumber-jvm-deps>1.0.5</cucumber-jvm-deps>
+        <picocontainer>2.15</picocontainer>
     </properties>
   
   <profiles>
@@ -40,7 +42,7 @@
     <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.0.0-alpha-6</version>
+            <version>3.141.0</version>
     </dependency>
    
    
@@ -50,7 +52,15 @@
     		<artifactId>maven-surefire-plugin</artifactId>
     		<version>3.0.0-M5</version>
 	</dependency>
-   
+
+
+
+    <dependency>
+            <groupId>com.assertthat</groupId>
+            <artifactId>selenium-shutterbug</artifactId>
+            <version>0.9</version>
+    </dependency>
+    
     <dependency>
             <groupId>net.masterthought</groupId>
             <artifactId>maven-cucumber-reporting</artifactId>
@@ -125,7 +135,26 @@
     		<artifactId>slf4j-simple</artifactId>
     		<version>1.6.1</version>
     		<scope>test</scope>
-</dependency>
+	</dependency>
+	
+	<dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-jvm-deps</artifactId>
+            <version>${cucumber-jvm-deps}</version>
+    </dependency>
+	
+	<dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-picocontainer</artifactId>
+            <version>${cucumber.version}</version>
+    </dependency>
+	
+	<dependency>
+            <groupId>org.picocontainer</groupId>
+            <artifactId>picocontainer</artifactId>
+            <version>${picocontainer}</version>
+            <scope>test</scope>
+        </dependency>
     
   </dependencies>
   
